# coursework

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  description.md  main.cpp  mainwindow.cpp  mainwindow.ui  report.tex
docs/: README.md
documentation/: README.md
gui/: CMakeLists copy.txt  main.cpp  mainwindow copy.h  mainwindow copy.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
header-files/: dsatur.h  graph.h
include/: colorChooser1.hpp  data-fetcher.hpp  dsatur-util.hpp  prepare-data.hpp  tabu-search-util.hpp
lib/: CMakeLists.txt
lib/DB-handlers/: CMakeLists.txt
lib/DB-handlers/include/: handler.hpp
lib/DB-handlers/src/: handler.cpp
lib/GraphColoring/: CMakeLists.txt
lib/GraphColoring/include/: degree-saturation.hpp  graph.hpp  tabu-search.hpp
lib/GraphColoring/src/: graph.cpp
lib/graph-coloring/: CMakeLists.txt
lib/graph-coloring/include/: degree-saturation.hpp  tabu-search.hpp
lib/utility/: CMakeLists.txt
lib/utility/include/: color-choosers.hpp
lib/utility/src/: color-choosers.cpp
libraries/: CMakeLists.txt  Makefile
libraries/graph-algorithms/: CMakeLists.txt
libraries/graph-algorithms/include/: coloring-algorithms.h  dsatur.hpp  graph.h  graph.hpp
libraries/graph-algorithms/src/: coloring-algorithms.cpp  graph.cpp
libraries/graph-coloring/: CMakeLists.txt
libraries/graph-coloring/include/: degree-saturation.hpp  degreeSaturation.hpp  graph.hpp  tabu-search.hpp  utility.hpp
libraries/graph-coloring/src/: graph.cpp
libraries/utilities/: CMakeLists.txt
libraries/utilities/include/: template-checkers.hpp
libraries/utility/include/: color-choosers.hpp
libraries/utility/src/: color-choosers.cpp
libs/algo/: CMakeLists.txt
libs/algo/headers/: dsatur.h  graph.h
libs/algo/sources/: dsatur.cpp  graph.cpp
source-files/: dsatur.cpp  graph.cpp
src/: CMakeLists.txt  color-chooser.cpp  colorChooser1.cpp  data-fetcher.cpp  dsatur-util.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mydialogue.cpp  mydialogue.h  prepare-data.cpp  tabu-search-util.cpp  test.cpp  users-db-handler.cpp
src/DataBaseHandlers/: CMakeLists.txt  usersDB-handler.cpp  usersDB-handler.h
src/LoginWindow/: CMakeLists.txt  login-window.cpp  login-window.h  login-window.ui
src/MainWindow/: CMakeLists.txt  main-window.cpp  main-window.h  main-window.ui  old_main-window.cpp
src/RegistrationWindow/: CMakeLists.txt  login-window.cpp  login-window.h  registration-window.cpp  registration-window.h  registration-window.ui
src/Utilities/: CMakeLists.txt  data-fetcher.cpp  data-fetcher.h  dsatur-util.cpp  dsatur-util.h  results-printer.cpp  results-printer.h  tabuSearch-util.cpp  tabuSearch-util.h
src/_MainWindow/: main-window.cpp  main-window.h  main-window.ui
src/colorChoosers/: colorChooser1.cpp
ui/: CMakeLists.txt  log-window.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reg-window.hpp  resources.qrc
