project(RegistrationWindow)

set(sources
    login-window.cpp
    registration-window.cpp
)

set(headers
    login-window.cpp
    registration-window.cpp
)

add_library(${PROJECT_NAME} STATIC)

target_sources(${PROJECT_NAME} 
    PRIVATE 
        "${sources}"
)

target_include_directories(${PROJECT_NAME} 
    PUBLIC 
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(${PROJECT_NAME} 
    PUBLIC 
        Qt6::Widgets
        Qt6::Sql
    PRIVATE
        MainWindow
        DataBaseHandlers
)
